# sdxl_artist_styles_studies

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  poetry.toml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
app/: __init__.py  app.py  endpoints.py  entitites.py  utils.py
static/: SDXL Image Synthesis Style Studies Database (Copy of The List) - Artists.csv  index.json  scripts.js  styles.css
static/Oxygen/: Oxygen-Regular.eot
templates/: artist.html  index.html
templates/.well-known/pki-validation/: DBF34983FE19661BED5F45461C841FB2.txt
